manifests/04-gateway-api/cross-namespace-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-routing
  namespace: store-apps
spec:
  from:
  # Allow Gateways residing in the 'gateway-infra' namespace
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateway-infra
  # Allow them to reference Services in this namespace
  to:
  - group: ""
    kind: Service
