manifests/04-gateway-api/store-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: store-apps
---
# Store Service (Product Catalog)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
  namespace: store-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: store
        image: registry.k8s.io/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-service
  namespace: store-apps
  annotations:
    # NEGs are required for Gateway API HTTPRoute backends
    cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
spec:
  type: ClusterIP
  selector:
    app: store
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
# Billing Service (Financials)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-v1
  namespace: store-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing
      version: v1
  template:
    metadata:
      labels:
        app: billing
        version: v1
    spec:
      containers:
      - name: billing
        image: registry.k8s.io/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: store-apps
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
spec:
  type: ClusterIP
  selector:
    app: billing
  ports:
  - name: http
    port: 8080
    targetPort: 8080
